--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -11,7 +11,7 @@
   <p>Number 1 - I'm a class!</p>
   <div id="id1">Number 2 - I'm one ID.</div>
   <p class="class1">Number 3 - I'm a class, but cooler!</p>
-  <div>Number 4 - I'm another ID.</div>
+  <div id="id2">Number 4 - I'm another ID.</div>
   <p>Number 5 - I'm a class!</p>
 </body>
 </html>
